# OptimaImg

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml  main.yml
benchmark/: benchmark.py  benchmark_results.md  pyproject.toml
cli/: cli.py
image_processing/: __init__.py  core.py
src/: lib.rs
tests/python/: helpers.py  test_image_processing.py
