[package]
name = "optimaimg"
version = "0.1.3"
authors = ["Your Name <hamsa.a.j@gmail.com>"]
edition = "2018"

[lib]
name = "optimaimg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
image = "0.24.7" # For image processing capabilities
imageproc = "0.23"

# Optional dependencies for other image processing features can be added here
