[tool.poetry]
name = "optimaimg"
version = "0.2.2"
description = "An image processing toolkit combining Python and Rust"
authors = ["Hamsa Jama <hamsa.a.j@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "^5.0", python = "<3.8"},
    {version = "^7.0", python = ">=3.8"}
]
pillow = [
    {version = "^8.0", python = "<3.8"},
    {version = "^10.1", python = ">=3.8"}
]
numpy = [
    {version = "^1.19", python = "<3.8"},
    {version = "^1.21", python = ">=3.8"}
]

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.3.1"]
build-backend = "maturin"
