[tool.poetry]
name = "optimaimg"
version = "0.2.3"
description = "An image processing toolkit combining Python and Rust"
authors = ["Hamsa Jama <hamsa.a.j@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "^5.0", python = "<3.8"},
    {version = "^7.0", python = ">=3.8"}
]
pillow = [
    {version = "^8.0", python = "<3.8"},
    {version = "^10.1", python = ">=3.8"}
]
numpy = [
    {version = "^1.19", python = "<3.8"},
    {version = "^1.21", python = ">=3.8"}
]

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.3.1"]
build-backend = "maturin"
