[project]
name = "optimaimg"
version = "0.7.0"
description = "An image processing toolkit combining Python and Rust"
authors = [{name = "Hamsa Jama", email = "hamsa.a.j@gmail.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.3.1"]
build-backend = "maturin"

[tool.maturin]
python-packages = ["cli"]

[project.scripts]
optimaimg-cli = "cli.cli:main"