[tool.poetry]
name = "benchmarktest-img-processing"
version = "0.1.0"
description = ""
authors = ["Hamsa Jama <hamsa.jama@cazoo.co.uk>"]
readme = "README.md"
packages = [{include = "benchmarktest_img_processing"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
optimaimg = "^0.5.0"
pillow = "^10.1.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
